    
    - Class-bound accessor can be used as the argument to 
      relation() order_by.  [ticket:939]

    - Fixed shard_id argument on ShardedSession.execute().
      [ticket:1072]
      
- sql
    - Connection.invalidate() checks for closed status 
      to avoid attribute errors. [ticket:1246]

    - NullPool supports reconnect on failure behavior.
      [ticket:1094]

- postgres
    - Added Index reflection support to Postgres, using a
      great patch we long neglected, submitted by 
      Ken Kuhlman. [ticket:714]
    
- mysql
    - Fixed bug in exception raise when FK columns not present
      during reflection. [ticket:1241]

- oracle
    - Fixed bug which was preventing out params of certain types
      from being received; thanks a ton to huddlej at wwu.edu !
      [ticket:1265]

0.4.8
=====
- orm
    - Fixed bug regarding inherit_condition passed
      with "A=B" versus "B=A" leading to errors
      [ticket:1039]

    - Changes made to new, dirty and deleted 
      collections in
      SessionExtension.before_flush() will take
      effect for that flush.

    - Added label() method to InstrumentedAttribute 
      to establish forwards compatibility with 0.5.
     
- sql
    - column.in_(someselect) can now be used as 
      a columns-clause expression without the subquery
      bleeding into the FROM clause [ticket:1074]
      
- mysql
    - Added MSMediumInteger type [ticket:1146].

- sqlite
    - Supplied a custom strftime() function which
      handles dates before 1900.  [ticket:968]

    - String's (and Unicode's, UnicodeText's, etc.) 
      convert_unicode logic disabled in the sqlite dialect, 
      to adjust for pysqlite 2.5.0's new requirement that 
      only Python unicode objects are accepted;
      http://itsystementwicklung.de/pipermail/list-pysqlite/2008-March/000018.html
      
- oracle
    - has_sequence() now takes schema name into account
      [ticket:1155]
    - added BFILE to the list of reflected types
      [ticket:1121]